--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <script src="https://kit.fontawesome.com/3d027cf56e.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="icon" href="/favicon.png" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <style>
         body {
@@ -76,8 +75,17 @@
             width: 100%;
             height: 250px;
             object-fit: cover;
-            border-radius: 20px;
+            border-radius: 20px 20px 0px 0px;
             border: 1px solid rgb(191, 191, 191);
+        }
+
+        .panel .logo {
+            width: auto;
+            height: auto;
+            object-fit: cover;
+            border-radius: none;
+            border: none;
+            float: right;
         }
 
         .pagination {
@@ -120,7 +128,7 @@
 
         header .title {
             font-family: "Noto Sans JP", sans-serif;
-            font-size: 40px;
+            font-size: 60px;
         }
 
         .information {
@@ -133,15 +141,45 @@
         }
 
         .price-panel {
-            padding: 10px 15px;
-            background-color: #5e41de33;
-            width: 130px;
-            margin-top: 10px;
-            font-size: small;
-            color: #5D41DE;
-            border: 1px solid #5e41de4d;
-            text-align: center;
-            border-radius: 15px;
+            padding-top: 15px;
+            padding-bottom: 15px;
+            width: 100%;
+            margin-top: 0px;
+            font-size: 25px;
+            font-family: "Noto Sans JP", sans-serif;
+            font-weight: 500;
+            border-bottom: 1px solid rgb(208, 208, 208);
+            text-align: left;
+        }
+
+        .modal {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.6);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+        }
+
+        .modal-content {
+            background-color: white;
+            padding: 20px 40px;
+            border-radius: 10px;
+            width: 80%;
+            max-width: 600px;
+        }
+
+        .close-button {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            font-size: 25px;
+            color: white;
+            cursor: pointer;
         }
 
         @media (max-width: 768px) {
@@ -156,7 +194,7 @@
             }
 
             .panel {
-                font-size: 12px;
+                font-size: 10px;
             }
 
             .panel img {
