--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            margin: 15px;
+            padding: 15px;
             background-color: rgba(0, 0, 0, 0.6);
             display: flex;
             justify-content: center;
