--- a/index.html
+++ b/index.html
@@ -159,7 +159,6 @@
             left: 0;
             width: 100%;
             height: 100%;
-            padding: 15px;
             background-color: rgba(0, 0, 0, 0.6);
             display: flex;
             justify-content: center;
@@ -169,6 +168,7 @@
 
         .modal-content {
             background-color: white;
+            margin: 15px;
             padding: 20px 40px;
             border-radius: 10px;
             width: 80%;
